--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         },
         eventSources: [
           {
-            url: 'https://calendar.google.com/calendar/ical/jesse%40gentlegiantjiujitsu.com/private-03008c378b8486ddae1787abd7341b36/basic.ics',
+            url: 'https://calendar.google.com/calendar/ical/jesse%40gentlegiantjiujitsu.com/public/basic.ics',
             format: 'ics'
           }
         ],
