--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     .nogi-kids { background-color: #f4a261 !important; }
     .gi-adults { background-color: #457b9d !important; }
     .nogi-adults { background-color: #9b5de5 !important; }
+    .fc-timegrid-slot-label { font-size: 0.75rem; }
+    .fc-timegrid-slot { height: 2.5em; }
   </style>
 </head>
 <body>
@@ -49,6 +51,8 @@
         expandRows: true,
         slotMinTime: '06:00:00',
         slotMaxTime: '21:00:00',
+        slotDuration: '00:30:00',
+        scrollTime: '06:00:00',
         firstDay: 0, // Sunday
         headerToolbar: {
           left: '',
