--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     document.addEventListener('DOMContentLoaded', function () {
       const calendarEl = document.getElementById('calendar');
       const calendar = new FullCalendar.Calendar(calendarEl, {
-        googleCalendarApiKey: 'YOUR_API_KEY_HERE', // 🔒 replace with real key
+        googleCalendarApiKey: 'AIzaSyDfzXSfAOlDL2PXWUzmKTL6z8U4IZIBHuc', // 🔒 replace with real key
         initialView: 'timeGridWeek',
         allDaySlot: false,
         nowIndicator: true,
