--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     .fc:first-of-type .fc-toolbar {
       display: flex;
       justify-content: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
 
     .fc .fc-timegrid-slot-label {
@@ -53,7 +53,7 @@
     }
 
     .fc .fc-timegrid-slot {
-      height: 1.5em;
+      height: 1.8em;
     }
 
     .section-label {
@@ -106,12 +106,15 @@
 
     <!-- Filters -->
     <div class="filter-bar">
-      <button class="filter-btn active" data-filter="gi">Gi</button>
-      <button class="filter-btn active" data-filter="nogi">NoGi</button>
-      <button class="filter-btn active" data-filter="cubs">Cubs</button>
-      <button class="filter-btn active" data-filter="kids">Kids</button>
-      <button class="filter-btn active" data-filter="adults">Adults</button>
+      <button class="filter-btn active" data-type="style" data-value="gi">Gi</button>
+      <button class="filter-btn active" data-type="style" data-value="nogi">NoGi</button>
+      <button class="filter-btn active" data-type="age" data-value="cubs">Cubs</button>
+      <button class="filter-btn active" data-type="age" data-value="kids">Kids</button>
+      <button class="filter-btn active" data-type="age" data-value="adults">Adults</button>
     </div>
+
+    <!-- Label -->
+    <div class="section-label">Morning Classes</div>
 
     <!-- Top Calendar (AM) -->
     <div id="calendar-am"></div>
@@ -130,7 +133,7 @@
   <script>
     function buildCalendar(elId, slotMin, slotMax, showHeader) {
       const calendar = new FullCalendar.Calendar(document.getElementById(elId), {
-        googleCalendarApiKey: 'AIzaSyDfzXSfAOlDL2PXWUzmKTL6z8U4IZIBHuc', // Replace with real key
+        googleCalendarApiKey: 'AIzaSyDfzXSfAOlDL2PXWUzmKTL6z8U4IZIBHuc',
         initialView: 'timeGridWeek',
         allDaySlot: false,
         nowIndicator: false,
@@ -155,24 +158,25 @@
           const title = info.event.title.toLowerCase();
           const el = info.el;
 
+          if (title.includes('cubs')) el.dataset.age = 'cubs';
+          else if (title.includes('kids')) el.dataset.age = 'kids';
+          else if (title.includes('adult')) el.dataset.age = 'adults';
+
+          if (title.includes('gi')) el.dataset.style = 'gi';
+          else if (title.includes('nogi')) el.dataset.style = 'nogi';
+
           if (title.includes('cubs') && title.includes('gi')) {
             el.classList.add('gi-cubs');
-            el.dataset.filter = "gi cubs";
           } else if (title.includes('cubs') && title.includes('nogi')) {
             el.classList.add('nogi-cubs');
-            el.dataset.filter = "nogi cubs";
           } else if (title.includes('kids') && title.includes('gi')) {
             el.classList.add('gi-kids');
-            el.dataset.filter = "gi kids";
           } else if (title.includes('kids') && title.includes('nogi')) {
             el.classList.add('nogi-kids');
-            el.dataset.filter = "nogi kids";
           } else if (title.includes('adult') && title.includes('gi')) {
             el.classList.add('gi-adults');
-            el.dataset.filter = "gi adults";
           } else if (title.includes('adult') && title.includes('nogi')) {
             el.classList.add('nogi-adults');
-            el.dataset.filter = "nogi adults";
           }
         },
         windowResize: function() {
@@ -187,16 +191,19 @@
       buildCalendar('calendar-am', '06:00:00', '08:00:00', true);
       buildCalendar('calendar-pm', '16:00:00', '21:00:00', false);
 
-      // Filter logic
+      // Toggle filters
       const buttons = document.querySelectorAll('.filter-btn');
       buttons.forEach(button => {
         button.addEventListener('click', () => {
-          button.classList.toggle('active');
-          const filter = button.dataset.filter;
+          const type = button.dataset.type;
+          const value = button.dataset.value;
+          const isActive = button.classList.toggle('active');
 
-          const isOn = button.classList.contains('active');
-          document.querySelectorAll(`[data-filter*="${filter}"]`).forEach(el => {
-            el.classList.toggle('hidden', !isOn);
+          document.querySelectorAll(`.fc-event`).forEach(el => {
+            const match = el.dataset[type] === value;
+            if (match) {
+              el.classList.toggle('hidden', !isActive);
+            }
           });
         });
       });
