--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         initialView: 'timeGridWeek',
         allDaySlot: false,
         nowIndicator: false,
-        expandRows: true,
+        expandRows: false,
         slotMinTime: slotMin,
         slotMaxTime: slotMax,
         scrollTime: slotMin,
