--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     /* Standardize row height */
     .fc .fc-timegrid-slot {
-      height: 60px;
+      height: 30px;
     }
 
     .fc .fc-timegrid-slot-minor {
@@ -113,6 +113,7 @@
         slotMinTime: slotMin,
         slotMaxTime: slotMax,
         scrollTime: slotMin,
+        slotDuration: '00:15:00',
         firstDay: 0,
         headerToolbar: showHeader ? { center: 'title' } : false,
         views: {
